--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -20,6 +20,8 @@ jobs:
           distribution: 'temurin'
 
       - uses: gradle/actions/setup-gradle@v3
+        with:
+          gradle-version: 'wrapper'
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
