--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
+      - name: Generate and submit dependency graph
+        uses: gradle/actions/dependency-submission@v3
+
       - name: Build with Gradle
         run: ./gradlew assembleDebug
 
