--- a/.github/workflows/dependency_scanning.yml
+++ b/.github/workflows/dependency_scanning.yml
@@ -12,6 +12,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      
+      - name: Set up JDK
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
 
       - name: Generate and submit dependency graph
         uses: gradle/actions/dependency-submission@v3
